--- a/client/src/views/Landing/Fondo.module.css
+++ b/client/src/views/Landing/Fondo.module.css
@@ -1,7 +1,7 @@
 .landing {
-  background-image: url(./components/FondoLanding.png);
+  background-image: url(https://media.wired.com/photos/62feb60bcea7c0581e825cb0/master/w_2560%2Cc_limit/Fate-of-Game-Preservation-Games-GettyImages-1170073827.jpg);
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   padding-top: 1px;
   padding-bottom: 126px;
 }
