--- a/client/src/views/Landing/Fondo.module.css
+++ b/client/src/views/Landing/Fondo.module.css
@@ -1,5 +1,5 @@
 .landing {
-  background-image: url(https://media.wired.com/photos/62feb60bcea7c0581e825cb0/master/w_2560%2Cc_limit/Fate-of-Game-Preservation-Games-GettyImages-1170073827.jpg);
+  background-image: url(https://t3.ftcdn.net/jpg/02/39/40/08/360_F_239400826_YQExbFZM7u7yesAAnEyZb8QauJu22MWQ.jpg);
   background-position: center;
   background-size: cover;
   padding-top: 1px;
