--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -11,11 +11,9 @@
 
 .front {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+    flex-direction: column;
   justify-content: center;
-  text-align: center;
-  align-items: flex-start; /* Modificado */
+  align-items: center; /* Modificado */
 }
 
 .imageContainer {
@@ -39,7 +37,6 @@
 }
 
 .name {
-  margin-left: 10px;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
   font-size: 25px;
   text-align: center;
@@ -73,4 +70,17 @@
   .card {
     max-width: 100%;
   }
+}
+
+.genero{
+  margin-top: 20px;
+  text-align: center;
+}
+
+.link {
+  display: block;
+  text-decoration: none;
+  color: inherit;
+  width: 100%;
+  height: 100%;
 }
