--- a/client/src/views/Form/Form.module.css
+++ b/client/src/views/Form/Form.module.css
@@ -16,6 +16,7 @@
   justify-content: space-between;
   flex: 8;
   color: #fff;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
 }
 
 .grid{
@@ -139,11 +140,9 @@ label[for="image"] {
 
 .front {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+    flex-direction: column;
   justify-content: center;
-  text-align: center;
-  align-items: flex-start; /* Modificado */
+  align-items: center;
 }
 
 .imageContainer {
@@ -167,7 +166,6 @@ label[for="image"] {
 }
 
 .name {
-  margin-left: 10px;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
   font-size: 25px;
   text-align: center;
@@ -201,6 +199,11 @@ label[for="image"] {
   .card {
     max-width: 100%;
   }
+}
+
+.genero{
+  margin-top: 20px;
+  text-align: center;
 }
 
 /* Estilo css para la checkboxes*/
