--- a/client/src/views/Detail/Detail.module.css
+++ b/client/src/views/Detail/Detail.module.css
@@ -1,34 +1,79 @@
 .videogamesdetail {
-  padding: 20px;
+  display: flex;
+  justify-content: center;
+  color: white;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
 }
 
 .container {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  align-items: flex-start;
+  margin-left: 20px;
 }
 
-.title {
-  color: white;
-  font-size: 24px;
-  font-weight: bold;
+.div1 {
+  width: 100%;
+  width: 800px;
 }
+
+.div2{
+  width: 100%;
+  width: 850px;
+  display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  margin-top: 20px;
+  
+  
+}
+
+
 
 .image {
-  width: 200px;
-  height: auto;
+  width: 100%;
+  height: 100%;
+  max-height: 450px;
+  margin-right: 20px;
 }
 
 .description {
-  color: white;
-  font-size: 18px;
   margin-bottom: 10px;
+  padding: 20px;
+  text-align: center;
 }
 
 .genre {
-  display: inline-block;
-  background-color: #555555;
   color: white;
-  padding: 5px 10px;
-  border-radius: 5px;
-  margin-right: 5px;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+  display: inline-block;
+  margin: 4px;
+  padding: 6px 12px;
+  border-radius: 20px;
+  background-color: #303030;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.genre:hover {
+  background-color: #505050;
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .image {
+    margin: 0 auto;
+    max-width: 100%; /* Ajustar el ancho máximo de la imagen al 100% en dispositivos pequeños */
+    height: auto;
+    max-height: 300px; /* Ajustar la altura máxima de la imagen en dispositivos pequeños */
+    margin-top: 20px; /* Agregar un margen superior para separarla del resto de los elementos */
+  }
+
+  .div1,
+  .div2 {
+    max-width: 100%; /* Ajustar el ancho máximo de los divs al 100% en dispositivos pequeños */
+  }
 }
