--- a/client/src/components/Cards/Cards.module.css
+++ b/client/src/components/Cards/Cards.module.css
@@ -1,12 +1,32 @@
 
-
 .cards {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    min-height: 516px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  gap: 20px;
+  min-height: 516px;
+  margin-left: 76px;
+}
+
+.center {
+  margin-left: -110px;
+  margin-top: 30px;
+  padding-bottom: 50px;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+}
+
+@media (max-width: 768px) {
+  .cards {
+    grid-template-columns: repeat(1, 1fr); /* Cambia a 2 columnas en dispositivos pequeños */
   }
-  
+
   .center {
-   margin-left: -110px;
- }
+    margin-left: 0; /* Elimina el margen izquierdo en dispositivos pequeños */
+  }
+}
+
+@media (max-width: 480px) {
+  .cards {
+    grid-template-columns: 1fr; /* Cambia a 1 columna en dispositivos extra pequeños */
+  }
+}
