--- a/client/src/views/Detail/Detail.module.css
+++ b/client/src/views/Detail/Detail.module.css
@@ -43,6 +43,10 @@
   text-align: center;
 }
 
+.plat{
+  margin-right: 50px;
+}
+
 .genre {
   color: white;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
