--- a/client/src/components/Filters/Filters.module.css
+++ b/client/src/components/Filters/Filters.module.css
@@ -1,45 +1,35 @@
-
-.texto {
-    font-family: "Pokemon Classic", sans-serif;
-    font-size: 11px;
-    margin-left: 35px;
-    margin-top: 25px;
-}
-
-.texto1 {
-    font-family: "Pokemon Classic", sans-serif;
-    font-size: 11px;
-    margin-left: 30px;
-}
-
-.texto2 {
-    font-family: "Pokemon Classic", sans-serif;
-    font-size: 11px;
-margin-left: 10px;
-}
-
-.texto3  {
-    font-family: "Pokemon Classic", sans-serif;
-    font-size: 11px;
-    margin-left: 380px;
-    margin-top: 25px;
-}
-
-.tipos {
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-bottom: 10px;
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(3, auto);
-}
-
 .checkboxes {
-    margin-left: 4px;
-}
+  color: white;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+  display: inline-block;
+  margin: 4px;
+  padding: 6px 12px;
+  border-radius: 20px;
+  background-color: #303030;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  }
+  
+  .checkboxes:hover {
+    background-color: #C1EEC2;
+    color: green;
+    
+  }
 
-.checkboxText {
-    font-family: "Pokemon Classic", sans-serif;
-    font-size: 10px;
-    margin-left: 5px;
-}
+  .checkboxes input[type="checkbox"] {
+    display: none;
+  }
+  
+  .checkboxes input[type="checkbox"]:checked + span {
+
+    color: #91ee8a;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+ 
+  }
+  
+  .checkboxes span {
+    display: inline-block;
+  }
+  
