--- a/client/src/components/Sorter/Sorter.module.css
+++ b/client/src/components/Sorter/Sorter.module.css
@@ -1,5 +1,19 @@
-.sortSelect {
+.sortSelect1 {
     background-color: #f2f2f2;
+    border: none;
+    color: #555;
+    padding: 8px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-right: 10px;
+    border-radius: 5px;
+    margin-top: 40px;
+    margin-left: 10px;
+}
+
+.sortSelect2 {
     border: none;
     color: #555;
     padding: 8px 12px;
