--- a/client/src/views/Landing/components/Landing.module.css
+++ b/client/src/views/Landing/components/Landing.module.css
@@ -3,16 +3,18 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100vh;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+  font-size: 25px;
   }
 
 
 .button-container {
-    text-align: center;
+    text-align: left;
     margin-top: 500px;
+    margin-left: 500px;
   }
 
   .title {
-    font-family: "Pokemon Classic", sans-serif;
     font-size: 48px;
     font-weight: bold;
     color: white;
@@ -33,8 +35,8 @@ html, body {
   
   
 .button {
-    font-family: "Pokemon Classic";
     display: inline-block;
+    
     padding: 12px 24px;
     background-color: #FFCB05;
     color: #333;
@@ -70,9 +72,12 @@ html, body {
 
 .imagecontainer img {
   position: absolute;
+  margin-top: -50px;
   right: 0;
   transition: transform 0.5s;
   transform: translateX(0);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
 }
 
 .imagecontainer:hover img:nth-child(1) {
@@ -87,3 +92,14 @@ html, body {
   transform: translateX(-200px) rotate(-30deg);
 }
 
+@keyframes flotar {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
