--- a/client/src/views/Landing/components/Landing.module.css
+++ b/client/src/views/Landing/components/Landing.module.css
@@ -3,8 +3,6 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
-  font-size: 25px;
   }
 
 
@@ -102,4 +100,21 @@ html, body {
   100% {
     transform: translateY(0);
   }
+}
+
+.svg{
+  margin-top: -1300px;
+}
+
+.container {
+  position: relative;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+  font-size: 25px;
+}
+
+.svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
