--- a/client/src/views/Detail/Detail.module.css
+++ b/client/src/views/Detail/Detail.module.css
@@ -1,5 +1,7 @@
 .videogamesdetail {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   color: white;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
@@ -80,4 +82,29 @@
   .div2 {
     max-width: 100%; /* Ajustar el ancho máximo de los divs al 100% en dispositivos pequeños */
   }
+}
+
+.recomendacion {
+  height: 100%;
+  padding: 5px;
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap; /* Permitir que las tarjetas se envuelvan en múltiples líneas */
+  justify-content: center;
+  align-items: center;
+}
+
+.recomendacion > div {
+  flex: 0 0 33.33%; /* Ajustar el ancho de cada tarjeta para que haya 3 por fila */
+  display: flex;
+  margin-left: 50px;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.h1{
+  background-color: #303030;
+  width: 100%;
+  text-align: center;
 }
