--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -31,7 +31,9 @@ body{
 }
 
 .sorter{
- 
+ display: flex;
+ justify-content: center;
+ align-items: center;
   margin-top: 50px;
   height: 150px;
 }
