--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -44,3 +44,11 @@
   .textogif {
     margin-left: 860px;
   }
+
+  .voicebutton {
+    display: inline-block;
+    border: none;
+    cursor: pointer;
+    margin-right: 10px;
+  }
+  
